--- a/_config.yml
+++ b/_config.yml
@@ -95,9 +95,8 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  CV               : "https://changzhu1997.github.io/files/Chang_CV.pdf"
   facebook         :
-  foursquare       :
+  foursquare       : "https://changzhu1997.github.io/files/Chang_CV.pdf"
   github           : "ChangZhu1997"
   google_plus      :
   keybase          :
