--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ author:
   dribbble         :
   flickr           :
   facebook         :
-  foursquare       : "https://changzhu1997.github.io/files/Chang_CV.pdf"
+  foursquare       :
   github           : "ChangZhu1997"
   google_plus      :
   keybase          :
