--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@
 locale                   : "en-US"
 title                    : "Chang Zhu"
 title_separator          : "-"
-name                     : &name "Chang Zhu"
-name                     : &name "祝畅"
+name                     : &name "Chang Zhu 祝畅"
 description              : &description "PhD Student at ASU"
 url                      : https://changzhu1997.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
