--- a/_config.yml
+++ b/_config.yml
@@ -81,6 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Chang Zhu 祝暢"
+  name             : "祝暢"
   avatar           : "changzhu.jpg"
   bio              : "PhD Student at ASU"
   location         : "Tempe - AZ"
