--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Chang Zhu 祝暢"
+  name             : "Chang Zhu"
   name             : "祝暢"
   avatar           : "changzhu.jpg"
   bio              : "PhD Student at ASU"
